# libndgpp

./: CMakeLists.txt  README.md
include/libndgpp/: algorithm.hpp  bool_sentry.hpp  bounded_integer.hpp  error.hpp  free.hpp  ios.hpp  network_byte_order.hpp  network_byte_order_ops.hpp  overload.hpp  parent_directory_name_length.hpp.in  preprocessor.hpp  safe_operators.hpp  sfinae.hpp  source_location.hpp  strto.hpp  strto_result.hpp  tuple.hpp  utility.hpp  variant.hpp  variant_alternative.hpp
include/libndgpp/algorithm/: accumulate.hpp
include/libndgpp/algorithm/detail/: accumulate.hpp
include/libndgpp/detail/: safe_operators.hpp  strto.hpp  variant_impl.hpp  variant_storage.hpp
include/libndgpp/ios/: ios_base_flag_sentry.hpp
include/libndgpp/net/: basic_ipv4_address.hpp  ipv4_address.hpp  ipv4_array.hpp  multicast_ipv4_address.hpp  port.hpp
include/libndgpp/type_traits/: char_numeric_type.hpp  conjunction_type.hpp  copy_control.hpp  is_class_defined.hpp  move_control.hpp
src/: bool_sentry.cpp
src/net/: ipv4_address.cpp  ipv4_array.cpp  multicast_ipv4_address.cpp
test/: CMakeLists.txt
test/algorithm/: CMakeLists.txt
test/algorithm/accumulate/: test.cpp
test/bounded_integer/: test.cpp
test/ios/: CMakeLists.txt
test/ios/ios_base_flag_sentry/: test.cpp
test/net/: CMakeLists.txt
test/net/basic_ipv4_address/: test.cpp
test/net/ipv4_address/: test.cpp
test/net/multicast_ipv4_address/: test.cpp
test/network_byte_order/: test.cpp
test/safe-ops/: test.cpp
test/strto/: test.cpp
test/tuple/: test.cpp
test/type_traits/: CMakeLists.txt
test/type_traits/char_numeric_type/: test.cpp
test/type_traits/conjunction_type/: test.cpp
test/type_traits/copy_control/: test.cpp
test/type_traits/is_class_defined/: test.cpp
test/variant/: test.cpp
