function(libndgpp_test source_path)
  get_filename_component(directory ${source_path} DIRECTORY)
  string(REPLACE "${CMAKE_SOURCE_DIR}/" "" relative_directory ${CMAKE_CURRENT_SOURCE_DIR})
  get_filename_component(filename ${source_path} NAME_WE)
  string(REPLACE "/" "-" sanitized_directory ${relative_directory})
  set(target_name ${sanitized_directory}-${directory})
  add_executable(${target_name} ${source_path})
  target_compile_options(${target_name} PUBLIC ${ndgpp_compiler_flags})
  target_link_libraries(${target_name} ndgpp gtest gtest_main)
  add_test(${target_name} ${target_name})
endfunction()

add_subdirectory(algorithm)
add_subdirectory(ios)
add_subdirectory(type_traits)
